--- a/story_nory/trip_item/index.html
+++ b/story_nory/trip_item/index.html
@@ -119,7 +119,8 @@
     <div id="hidelberg-3" class="step in-3d" data-x="-5000" data-y="-3000" data-z="-100" data-rotate-x="0" data-rotate-y="0" data-scale="2">
       <p>지하와 지상 3층에 똬리를 치며<br />
       난 <strong>계단을 따라</strong> 오르락내리락 하면서,<br />
-      누구나 <strong>성스런 책벌레</strong>의 행색을 갖추게 된다.</p>
+      누구나 <strong>성스런 책벌레</strong>의<br />
+      행색을 갖추게 된다.</p>
     </div>
 
     <div id="hidelberg-4" class="step trip-photo" data-x="-5000" data-y="-3000" data-scale="5">
@@ -138,9 +139,13 @@
     </div>
 
     <div id="amsterdam-3" class="step in-3d" data-x="0" data-y="-3000" data-z="-100" data-rotate-x="0" data-rotate-y="0" data-scale="2">
-      <p>지하와 지상 3층에 똬리를 치며<br />
-      난 <strong>계단을 따라</strong> 오르락내리락 하면서,<br />
-      누구나 <strong>성스런 책벌레</strong>의 행색을 갖추게 된다.</p>
+      <p>나무 계단을 따라 뱅뱅 둘러 안착한<br />
+      <strong>아트북의 곡예</strong> 때문일까.<br />
+      혹 표지만으로도 반하는,<br />
+      <strong>엄선된 책의 절규</strong> 때문일까.<br />
+      <strong>3백 년</strong>이나 된 건물치고<br />
+      그만큼의 운치가 없다는<br />
+      외관의 실망감도 숨을 죽인지 오래다.</p>
     </div>
 
     <div id="amsterdam-4" class="step trip-photo" data-x="0" data-y="-3000" data-scale="5">
